<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textProvider"
        android:layout_width="148dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="0dp"
        android:text="@string/dummy"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textLabelProvider"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:text="@string/provider"
        android:textAlignment="textEnd"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="31dp"
        android:text="@string/dummy"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textLabelLatitude"
        android:layout_width="119dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="30dp"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:text="@string/latitude"
        android:textAlignment="textEnd"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="200dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="65dp"
        android:text="@string/dummy"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textLabelLongitude"
        android:layout_width="119dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="65dp"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:text="@string/longitude"
        android:textAlignment="textEnd"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        android:text="@string/dummy"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/dummy"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textNewLocLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        android:text="@string/newloc"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="216dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/dummy"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:paddingTop="5dp"
        android:singleLine="false"
        android:textColorHint="#757575"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/buttonNewLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="254dp"
        android:layout_marginTop="260dp"
        android:backgroundTint="#BDBABA"
        android:onClick="onNew"
        android:text="@string/newButton"
        android:textColor="#050505"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>